--- a/web/index.html
+++ b/web/index.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <base href="/">
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
+
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
+
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
+  <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
 
-  <!-- iOS & Mobile meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
+  <!-- iOS meta tags & icons -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="recipe">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>recipe</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const flutter_service_worker_version = "3866553588";
+    const serviceWorkerVersion = null;
   </script>
-  <!-- Flutter initialization script -->
+  <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
-
 <body>
   <script>
-    window.addEventListener('load', function (ev) {
-      // Ensure Flutter build config is loaded
-      if (!_flutter.buildConfig) {
-        console.error("FlutterLoader.load requires _flutter.buildConfig to be set");
-        return;
-      }
-
-      // Load Flutter app
-      _flutter.loader.load({
+    window.addEventListener('load', function(ev) {
+      // Download main.dart.js
+      _flutter.loader.loadEntrypoint({
         serviceWorker: {
-          serviceWorkerVersion: flutter_service_worker_version,
+          serviceWorkerVersion: serviceWorkerVersion,
         },
-        onEntrypointLoaded: function (engineInitializer) {
-          engineInitializer.initializeEngine().then(function (appRunner) {
+        onEntrypointLoaded: function(engineInitializer) {
+          engineInitializer.initializeEngine().then(function(appRunner) {
             appRunner.runApp();
           });
         }
@@ -51,5 +56,4 @@
     });
   </script>
 </body>
-
 </html>
